--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,8 +5,8 @@
         "ghcr.io/devcontainers/features/sshd:1": {
             "version": "latest"
         }
-    },
-    "postStartCommand": "python3 /workspaces/HOKE/g.py",
+    }
+    "postStartCommand": "python3 /workspaces/KILL/kishif.py",
     "customizations": {
         "vscode": {
             "settings": {
